# connect4

./: .gitignore  CMakeLists.txt
julia_wrapper/: CMakeLists.txt  connect4jl.cpp
